finish deploy script

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ ETHERSCAN_API_KEY=TK2WEVZUAEJZNCYTIDT7Z7M1Z8FYAXMI8J # verify # https://ethersca
 MUMBAI_API_KEY=7XU9WJN6PSICABVKWUWYJBDXRJSJY6QAYA # for verifying # https://polygonscan.com/myapikey
 COINMARKETCAP_API_KEY=75e772f8-d218-470a-8dac-73d8e9b245fe # gas output
 UPDATE_FRONT_END=true
+UPLOAD_TO_PINATA=false
