--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.2",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "2.2.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.9.0",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-deploy": "^0.10.5",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier": "^2.5.1",
